--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.9",
-    "next": "^15.1.3",
+    "next": "15.1.11",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "pnpm": "^10.14.0",
@@ -72,7 +72,7 @@
     "@types/react-modal": "^3.16.3",
     "@types/unist": "^3.0.3",
     "eslint": "^9.32.0",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "15.1.11",
     "playwright": "1.44.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
